# robotica_2024_project

./: README.md
src/niryo_robot/my_niryo_robot_description/: CMakeLists.txt  package.xml
src/niryo_robot/my_niryo_robot_description/action/: ActionMsg.action  scan_pose.action
src/niryo_robot/my_niryo_robot_description/config/: bakjes.yaml  default_config.rviz
src/niryo_robot/my_niryo_robot_description/meshes/: bakje.dae  bakje_colision.stl  grippe_base_colision.stl  grippe_left_colision.stl  grippe_right_colision.stl  gripper_left.dae  gripper_right.dae
src/niryo_robot/my_niryo_robot_description/meshes/bakje/: bakje_bakje.stl  bakje_bakje_bakje.stl  bakjebakjebakje.dae  bakjebakjebakjev5.dae  box.dae  boxv5.stl  uitsorteerbakje_collision.dae  uitsorteerbakje_collision.stl  uitsorteerbakjesv3.stl
src/niryo_robot/my_niryo_robot_description/meshes/camera/: cameraHouder.dae  cameraHouder_colision.stl
src/niryo_robot/my_niryo_robot_description/meshes/draaitafel/: Assem_draaitafel_v2_zonder_schijf.stl  Schijf.stl  coll_plaatv2.stl  draaitafel_collision.stl  plaatv2.dae  rotate_coll.stl  rotatev5.stl  zonder_plaat_draaitafelv2.dae
src/niryo_robot/my_niryo_robot_description/meshes/gripper/: gripper_base_v4.dae  gripper_base_v4.stl
src/niryo_robot/my_niryo_robot_description/meshes/schot/: schot_colision.stl  schotv2.dae
src/niryo_robot/my_niryo_robot_description/urdf/: bakje.urdf.xacro  schot.urdf.xacro
src/niryo_robot/my_niryo_robot_description/urdf/ned/: niryo_ned_gripper.urdf.xacro
src/niryo_robot/my_niryo_robot_description/urdf/ned2/: niryo_ned2.transmission.xacro  niryo_ned2.urdf.xacro  niryo_ned2_robot.urdf.xacro
src/niryo_robot/my_niryo_robot_description/urdf/trash/: Draaitafel.urdf.xacro  bakje.urdf.xacro  camera.urdf.xacro  schot.urdf.xacro
src/niryo_robot/my_niryo_robot_description/urdf/trash/ned2/: niryo_ned2.transmission.xacro  niryo_ned2.urdf.xacro  niryo_ned2_robot.urdf.xacro  (+1 more)
(+90 files in other folders)
