<?xml version="1.0"?>
<package format="2">
  <name>my_niryo_robot_description</name>
  <version>3.2.0</version>
  <description>Provides URDF files</description>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>actionlib_msgs</build_depend>

  <export>
  </export>

</package>
